--- a/package.xml
+++ b/package.xml
@@ -1,19 +1,17 @@
 <package>
-  <name>viso2_ros</name>
+  <name>viso2_slam</name>
   <version>0.0.1</version>
-  <description>This is the ROS wrapper for libviso2, library for visual odometry (see package libviso2).</description>
+  <description>Implementation of SLAM module with libviso2 as VO.</description>
 
   <license>GPL</license>
 
   <url type="website">http://ros.org/wiki/viso2_ros</url>
-  <url type="bugtracker">https://github.com/srv/viso2/issues</url>
 
-  <author email="stephan.wirth@uib.es">Stephan Wirth</author>
-  <maintainer email="stephan.wirth@uib.es">Stephan Wirth</maintainer>
+  <author email="phamngtuananh@gmail.com">Tuan Anh</author>
+  <maintainer email="phamngtuananh@gmail.com">Tuan Anh</maintainer>
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <build_depend>libviso2</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>nav_msgs</build_depend> 
@@ -27,7 +25,6 @@
   <build_depend>std_srvs</build_depend> 
   <build_depend>message_generation</build_depend> 
   
-  <run_depend>libviso2</run_depend> 
   <run_depend>roscpp</run_depend> 
   <run_depend>sensor_msgs</run_depend>
   <run_depend>nav_msgs</run_depend>
