--- a/package.xml
+++ b/package.xml
@@ -22,6 +22,7 @@
   <build_depend>tf</build_depend> 
   <build_depend>PCL</build_depend>
   <build_depend>pcl_ros</build_depend> 
+  <build_depend>pcl_conversions</build_depend> 
   <build_depend>std_srvs</build_depend> 
   <build_depend>message_generation</build_depend> 
   
@@ -35,6 +36,7 @@
   <run_depend>tf</run_depend>
   <run_depend>PCL</run_depend>
   <run_depend>pcl_ros</run_depend>
+  <run_depend>pcl_conversions</run_depend>
   <run_depend>std_srvs</run_depend>
   <run_depend>message_runtime</run_depend>
 
