--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,18 +55,21 @@ add_library(viso2
   include/viso_stereo.cpp
 )
 
-add_library(kalman
-  src/kalman.cpp
-)
+# add_library(kalman
+#   src/kalman.cpp
+# )
   
 add_executable(stereo_slam src/stereo_slam.cpp)
-add_executable(pose_optimizer src/pose_optimizer.cpp)
+add_executable(pose_optimizer_raw src/pose_optimizer_raw.cpp)
+add_executable(pose_optimizer_fused src/pose_optimizer_fused.cpp)
 add_executable(mapper src/mapper.cpp)
 
 add_dependencies(stereo_slam ${catkin_EXPORTED_TARGETS} ${PROJECT_NAME}_gencpp)
-add_dependencies(pose_optimizer ${catkin_EXPORTED_TARGETS} ${PROJECT_NAME}_gencpp)
+add_dependencies(pose_optimizer_raw ${catkin_EXPORTED_TARGETS} ${PROJECT_NAME}_gencpp)
+add_dependencies(pose_optimizer_fused ${catkin_EXPORTED_TARGETS} ${PROJECT_NAME}_gencpp)
 add_dependencies(mapper ${catkin_EXPORTED_TARGETS} ${PROJECT_NAME}_gencpp)
 
 target_link_libraries(stereo_slam viso2 ${OpenCV_LIBRARIES} ${catkin_LIBRARIES} ${Boost_LIBRARIES})
-target_link_libraries(pose_optimizer kalman ${catkin_LIBRARIES} ${Boost_LIBRARIES} ${CERES_LIBRARIES} glog ${GFLAGS_LIBRARIES})
+target_link_libraries(pose_optimizer_raw ${catkin_LIBRARIES} ${Boost_LIBRARIES} ${CERES_LIBRARIES} glog ${GFLAGS_LIBRARIES})
+target_link_libraries(pose_optimizer_fused ${catkin_LIBRARIES} ${Boost_LIBRARIES} ${CERES_LIBRARIES} glog ${GFLAGS_LIBRARIES})
 target_link_libraries(mapper ${catkin_LIBRARIES} ${PCL_LIBRARIES})
